# tri_poly_moment

./: Cargo.toml  README.md
src/: expotential.rs  gaussian.rs  lib.rs  uniform.rs
tests/: expotential_test.rs  gaussian_test.rs  uniform_test.rs
