[package]
name = "tri_poly_moment"
description ="Calculate moments of random variables. The distributions of the random variables are normal, uniform, and exponential. "
version = "0.1.1"
edition = "2021"
LICENSE = "MIT"
# license-file = "LICENSE"
repository = "https://github.com/Spargel125/tri_poly_moment"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
